src/objects/ADvendio__AdServerExclusion__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set the advertiser to whom this exclusion to apply.</description>
        <inlineHelpText>Set the advertiser to whom this exclusion to apply.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AdServer Exclusions</relationshipLabel>
        <relationshipName>AdServerExclusions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServerID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set the AdServer-ID being used as exclusion.</description>
        <inlineHelpText>Set the AdServer-ID being used as exclusion.</inlineHelpText>
        <label>AdServer ID</label>
        <referenceTo>ADvendio__AdServer_ID__c</referenceTo>
        <relationshipLabel>AdServer Exclusions</relationshipLabel>
        <relationshipName>AdServerExclusions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set the Ad-Spec to whom the exclusion to apply.</description>
        <inlineHelpText>Set the Ad-Spec to whom the exclusion to apply.</inlineHelpText>
        <label>Ad Spec</label>
        <referenceTo>ADvendio__Ad_Specs__c</referenceTo>
        <relationshipLabel>AdServer Exclusions</relationshipLabel>
        <relationshipName>AdServerExclusions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set the Ad-Type to whom the exclusion to apply.</description>
        <inlineHelpText>Set the Ad-Type to whom the exclusion to apply.</inlineHelpText>
        <label>Ad Type</label>
        <referenceTo>ADvendio__Ad_Type__c</referenceTo>
        <relationshipLabel>AdServer Exclusions</relationshipLabel>
        <relationshipName>AdServerExclusions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set the Campaign-Item to whom the exclusion to apply.</description>
        <inlineHelpText>Set the Campaign-Item to whom the exclusion to apply.</inlineHelpText>
        <label>Campaign Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>AdServer Exclusions</relationshipLabel>
        <relationshipName>AdServerExclusions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__MediaCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set the Media-Campaign to whom the exclusion to apply.</description>
        <inlineHelpText>Set the Media-Campaign to whom the exclusion to apply.</inlineHelpText>
        <label>Media Campaign</label>
        <referenceTo>ADvendio__MediaCampaign__c</referenceTo>
        <relationshipLabel>AdServer Exclusions</relationshipLabel>
        <relationshipName>AdServerExclusions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AdServer Exclusion</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AdServer Exclusion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdServer Exclusions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>